--- a/all/html/one/圆角和阴影.html
+++ b/all/html/one/圆角和阴影.html
@@ -17,7 +17,15 @@
             height: 50px;
             background-color: pink;
             margin: 100px;
-            border-radius: 25px;
+            /*
+                圆角 左上 右上 右下 左下
+                对角线为一组，左上右下  右上左下
+            */
+            /* border-radius: 50% 50% 0 0; */
+            border-radius: 0 50% 50% 0;
+            /* border-radius: 0 50%; */
+            /* border-radius: 0 50% 0; */
+            /* border-radius: 10px 0 10px 0; */
             /* 
                 x y 模糊度 阴影尺寸 颜色 内阴影或外阴影，默认外阴影
             */
