--- a/all/html/html重点/定位的技巧.html
+++ b/all/html/html重点/定位的技巧.html
@@ -55,6 +55,8 @@
             /* 
                 移动自身一半的距离
                     tanslate(x,y)
+                    注意：
+                        行内元素无效！
             */
             transform: translate(-50%, -50%);
         }
