--- a/all/html/js重点/数据类型.html
+++ b/all/html/js重点/数据类型.html
@@ -7,6 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
+        var num = 12; //数字型
+        var num = '1'; //字符串
+        var num = false; //布尔型
+        var num = undefined; //undefined
+        var num = null; //空值
+        var num = {
+            name: "tom",
+            age: 12
+        }; //对象型
+
+
+
         var num = 11
         console.log(num)
 
