--- a/all/html/移动端/h5-2/index.html
+++ b/all/html/移动端/h5-2/index.html
@@ -119,17 +119,102 @@
     </nav>
     <!-- 侧导航栏 -->
     <ul class="subnav-entry">
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li>6</li>
-        <li>7</li>
-        <li>8</li>
-        <li>9</li>
-        <li>10</li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+
     </ul>
+    <!-- 销售模块 -->
+    <div class="sales-box">
+        <div class="sales-hd">
+            <h2>热门活动</h2>
+            <a href="#">获取更多福利</a>
+        </div>
+        <div class="sales-bd">
+            <div class="row">
+                <a href="#">
+                    <img src="./upload/pic1.jpg" alt="">
+                </a>
+                <a href="#">
+                    <img src="./upload/pic2.jpg" alt="">
+                </a>
+            </div>
+            <div class="row">
+                <a href="#">
+                    <img src="./upload/pic3.jpg" alt="">
+                </a>
+                <a href="#">
+                    <img src="./upload/pic4.jpg" alt="">
+                </a>
+            </div>
+            <div class="row">
+                <a href="#">
+                    <img src="./upload/pic5.jpg" alt="">
+                </a>
+                <a href="#">
+                    <img src="./upload/pic6.jpg" alt="">
+                </a>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
