--- a/all/html/移动端/媒体查询.html
+++ b/all/html/移动端/媒体查询.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+        }
+        /* 
+            在屏幕上最大宽度为800px
+                max-width 最大宽度，大于设置的值变无效
+        */
+        
+        @media screen and (max-width:800px) {
+            /* body {
+                background-color: pink;
+            } */
+        }
+        /* 
+            在屏幕上最大宽度为800px
+                min-width 最小宽度，小于设置的值变无效
+        */
+        
+        @media screen and (min-width:801px) {
+            /* body {
+                background-color: peru;
+            } */
+        }
+    </style>
 </head>
 
 <body>
