--- a/all/html/js重点/对象2.html
+++ b/all/html/js重点/对象2.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: xiuxiu
  * @Date: 2021-10-27 11:53:45
- * @LastEditTime: 2021-10-27 12:14:10
+ * @LastEditTime: 2021-10-27 18:19:04
  * @FilePath: \all\html\js重点\对象2.html
 -->
 <!DOCTYPE html>
@@ -24,16 +24,18 @@
         // var tom = new Cat("tom", "蓝色")
         // console.log(tom);
         // tom.clutch()
-        function fun() {
-            var arr = []
-            for (var i = 0; i < 101; i++) {
-                if (i % 5 == 0) {
-                    arr.push(i)
-                }
-            }
-            console.log(arr[Math.floor(Math.random() * arr.length)]);
-        }
-        fun()
+        // function fun() {
+        //     var arr = []
+        //     for (var i = 0; i < 101; i++) {
+        //         if (i % 5 == 0) {
+        //             arr.push(i)
+        //         }
+        //     }
+        //     console.log(arr[Math.floor(Math.random() * arr.length)]);
+        // }
+        // fun()
+        console.log(Math.PI); //输出圆周率
+        console.log(Math.max(1, 99, 3)); //返回其中最大的数，如果参数不是数值型，返回NaN
     </script>
 </head>
 
