--- a/all/html/移动端/c.html
+++ b/all/html/移动端/c.html
@@ -1,3 +1,9 @@
+<!--
+ * @Author: xiuxiu
+ * @Date: 2021-10-24 14:22:22
+ * @LastEditTime: 2021-10-27 16:19:03
+ * @FilePath: \all\html\移动端\c.html
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -25,7 +31,6 @@
         
         .box2 {
             width: 250px;
-            /* height: 100px; */
             background-color: orange;
             flex-shrink: 0;
         }
