字符串对象

--- a/all/html/js重点/demo1.html
+++ b/all/html/js重点/demo1.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: xiuxiu
  * @Date: 2021-10-28 11:58:46
- * @LastEditTime: 2021-10-28 12:24:14
+ * @LastEditTime: 2021-10-28 12:57:24
  * @FilePath: \all\html\js重点\demo1.html
 -->
 <!DOCTYPE html>
@@ -26,6 +26,10 @@
             return a - b //升序排列
                 // return b - a //降序排列
         })); //sort()方法，数组排序
+
+        // 查找数组里的元素，返回索引
+        console.log(newArr.indexOf(1200)); //返回找到的第一个元素的索引
+        console.log(newArr.lastIndexOf(1200)); //返回找到的最后一个元素索引
     </script>
 </head>
 
