--- a/all/html/DOM/demo7.html
+++ b/all/html/DOM/demo7.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: xiuxiu
  * @Date: 2021-11-06 16:46:55
- * @LastEditTime: 2021-11-06 16:54:03
+ * @LastEditTime: 2021-11-06 16:56:34
  * @FilePath: \all\html\DOM\demo7.html
 -->
 <!DOCTYPE html>
@@ -54,7 +54,7 @@
                 } else {
                     var li = document.createElement("li")
                     li.innerHTML = text.value
-                    ul.appendChild(li)
+                    ul.insertBefore(li, ul.children[0])
                 }
             }
         }
