--- a/all/html/DOM/demo7.html
+++ b/all/html/DOM/demo7.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: xiuxiu
  * @Date: 2021-11-06 16:46:55
- * @LastEditTime: 2021-11-06 16:56:34
+ * @LastEditTime: 2021-11-06 17:16:10
  * @FilePath: \all\html\DOM\demo7.html
 -->
 <!DOCTYPE html>
@@ -42,6 +42,10 @@
             font-size: 14px;
             margin: 15px 0;
         }
+        
+        li a {
+            float: right;
+        }
     </style>
     <script>
         window.onload = function() {
@@ -53,8 +57,15 @@
                     alert("先输入内容！")
                 } else {
                     var li = document.createElement("li")
+                    var aRemove = document.createElement("a")
+                    aRemove.href = "javascript:;"
+                    aRemove.innerHTML = "删除"
                     li.innerHTML = text.value
                     ul.insertBefore(li, ul.children[0])
+                    li.appendChild(aRemove)
+                    aRemove.onclick = function() {
+                        ul.removeChild(this.parentNode)
+                    }
                 }
             }
         }
