--- a/all/html/BOM/定时器.html
+++ b/all/html/BOM/定时器.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: xiuxiu
  * @Date: 2021-11-08 16:41:34
- * @LastEditTime: 2021-11-08 17:28:28
+ * @LastEditTime: 2021-11-08 17:42:18
  * @FilePath: \all\html\BOM\定时器.html
 -->
 <!DOCTYPE html>
@@ -17,9 +17,11 @@
             function fn() {
                 console.log("计时器");
             }
-            setTimeout(fn, 3000);
+            // setTimeout(fn, 3000);
             // 回调函数，需要等待时间过去了才调用函数。
             // element.onclick=function(){} 和 element.addEventListener("click",function(){})里面的函数都是回调函数
+
+            setInterval(fn, 1000); //每隔多少秒，就调用一次
         }
     </script>
 </head>
