--- a/all/html/vue/09_天气案例.html/3.天气案例_深度监视.html
+++ b/all/html/vue/09_天气案例.html/3.天气案例_深度监视.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: xiuxiu
  * @Date: 2021-11-13 18:06:27
- * @LastEditTime: 2021-11-15 02:03:56
- * @FilePath: \all\html\vue\09_天气案例.html\2.天气案例_监视属性.html
+ * @LastEditTime: 2021-11-15 02:10:42
+ * @FilePath: \all\html\vue\09_天气案例.html\3.天气案例_深度监视.html
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -21,6 +21,11 @@
         <!-- @xxx='yyy' 可以写一些简单的语句 -->
         <!-- <button @click='isHot=!isHot'>切换</button> -->
         <button @click='changeWeather'>切换</button>
+        <hr>
+        <h3>a的值是：{{numbers.a}}</h3>
+        <button @click="add">a+1</button>
+        <h3>b的值是：{{numbers.b}}</h3>
+        <button @click="add">b+1</button>
     </div>
 
 </body>
@@ -30,7 +35,11 @@
     const vm = new Vue({
         el: "#root",
         data: {
-            isHot: true
+            isHot: true,
+            numbers: {
+                a: 1,
+                b: 1
+            }
         },
         computed: {
             info() {
@@ -40,26 +49,28 @@
         methods: {
             changeWeather() {
                 this.isHot = !this.isHot
+            },
+            add() {
+                this.numbers.a++
             }
         },
 
         //监视
         watch: {
-            info: {
+            //监视多个属性中某个属性的变化
+            'numbers.a': {
                 immediate: true,
-                //handler调用时机
-                // 当isHot被改变时
                 handler(newValue, oldValue) {
-                    console.log("info", newValue, oldValue);
+                    console.log("a", newValue, oldValue);
+                }
+            },
+            'numbers.b': {
+                immediate: true,
+                handler(newValue, oldValue) {
+                    console.log("b", newValue, oldValue);
                 }
             }
         },
-    })
-    vm.$watch('isHot', {
-        immediate: true,
-        handler(newValue, oldValue) {
-            console.log("isHot", newValue, oldValue);
-        }
     })
 </script>
 
