--- a/all/html/DOM/封装dom库/src/index.html
+++ b/all/html/DOM/封装dom库/src/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: xiuxiu
  * @Date: 2021-11-18 22:14:55
- * @LastEditTime: 2021-11-18 23:06:08
+ * @LastEditTime: 2021-11-19 11:19:16
  * @FilePath: \all\html\DOM\封装dom库\src\index.html
 -->
 <!DOCTYPE html>
@@ -18,6 +18,7 @@
     示例
     <div>
         <div id="test"></div>
+        <div id="test2"></div>
     </div>
     <script src="dom.js"></script>
     <script src="main.js"></script>
