--- a/all/html/DOM/封装dom库/src/index.html
+++ b/all/html/DOM/封装dom库/src/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: xiuxiu
  * @Date: 2021-11-18 22:14:55
- * @LastEditTime: 2021-11-19 11:41:38
+ * @LastEditTime: 2021-11-20 02:26:21
  * @FilePath: \all\html\DOM\封装dom库\src\index.html
 -->
 <!DOCTYPE html>
@@ -17,7 +17,9 @@
 <body>
     示例
     <div>
-        <div id="test"></div>
+        <div id="test">newDIV
+            <p>1100</p>
+        </div>
     </div>
 
     <div id="empty">
